<!--
  ~ Copyright (c) Sebastian Lenkiewicz 2018.
  -->

<resources>
    <string name="app_name">Wireless Manager</string>

    <string name="hello_blank_fragment">Hello blank </string>
    <string name="wifi_text_ph">Wi-fi placeholder</string>
    <string name="telephony_text_ph">Telephony Placeholder</string>
    <string name="cell_text_ph">Cell Placeholder</string>
    <string name="signal_strength_ph">Signal Strength Placeholder</string>
    <string name="placeholder">Placeholder</string>
    <string name="system_title">Phone Details:</string>
    <string name="cell_title">Cell Information:</string>
    <string name="signal_title">Signal Strength:</string>
    <string name="ph_wifi_state">placeholder state</string>
    <string name="wifi_on">Wi-Fi: ON</string>
    <string name="wifi_off">Wi-Fi: OFF</string>
    <string name="wifi_switch_on">On</string>
    <string name="wifi_switch_off">Off</string>
    <string name="wifi_enabling">Wi-Fi: Enabling</string>
    <string name="wifi_disabling">Wi-Fi: Disabling</string>
    <string name="wifi_basic_title">Wi-Fi details:</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="wifi_title">Wi-Fi</string>
    <string name="telephony_title">Telephony</string>
    <string name="firebase_title">Firebase</string>
    <string name="status">Firebase: Not Connected</string>
    <string name="firebase_login">Login</string>
    <string name="firebase_register">Register</string>
    <string name="password">Password</string>
    <string name="email_hint">E-mail address</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create account</string>
    <string name="firebase_connected">Firebase: Connected</string>
    <string name="firebase_disconnected">Firebase: disconnected</string>
    <string name="telephony_heatmap">Heatmap</string>
    <string name="title_activity_heat_map">Map</string>
    <string name="map_lte">LTE</string>
    <string name="map_umts">UMTS</string>
    <string name="type_selection_text">Network Type:</string>
    <string name="border_txt">Show border</string>
    <string name="firebase_signOut">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="pick_cell">Pick network type to show</string>
    <string name="border_convex">Convex border</string>
    <string name="border_concave">Concave border</string>
    <string name="border_cluster">Cell clusters</string>
    <string name="border_best_pilot">Show best pilot</string>
    <string name="pick_cell_type">Network:</string>
    <string name="pick_border_type">Border options:</string>
    <string name="map_heatmap">Signal heatmap</string>
</resources>
