<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Sebastian Lenkiewicz 2018.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/firebase_title">
        <menu>
            <item
                android:id="@+id/firebase_login"
                android:title="@string/firebase_login"/>
            <item
                android:id="@+id/firebase_register"
                android:title="@string/firebase_register"/>
            <item
                android:id="@+id/firebase_signOut"
                android:title="@string/firebase_signOut"/>
        </menu>
    </item>
    <item android:title="@string/telephony_title">
        <menu>
            <item
                android:id="@+id/telephony_heatmap"
                android:title="@string/telephony_heatmap"/>
        </menu>
    </item>
</menu>