<!--
  ~ Copyright (c) Sebastian Lenkiewicz 2018.
  -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<fragment
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.example.sebastian.wirelessmanager.telephony.heatmap.HeatMapActivity" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingRight="5dp"
            android:paddingEnd="5dp">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                card_view:contentPadding="8dp"
                android:layout_margin="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/map_network_operator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black"
                        android:layout_centerInParent="true"
                        android:layout_alignParentTop="true"
                        android:textSize="12sp"/>
                    <RelativeLayout
                        android:id="@+id/options_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/map_network_operator"
                        android:animateLayoutChanges="true"
                        android:visibility="gone">
                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>
                        <TextView
                            android:id="@+id/pick_cell_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:layout_below="@id/divider"
                            android:text="@string/pick_cell_type"/>
                        <RadioGroup
                            android:id="@+id/cell_selection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pick_cell_type">
                            <RadioButton
                                android:id="@+id/type_lte"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/map_lte"/>
                            <RadioButton
                                android:id="@+id/type_umts"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/map_umts"/>
                        </RadioGroup>
                        <TextView
                            android:id="@+id/pick_border_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:layout_below="@id/divider"
                            android:text="@string/pick_border_type"
                            android:layout_alignParentEnd="true"/>
                        <RadioGroup
                            android:id="@+id/border_selection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pick_border_type"
                            android:layout_alignParentEnd="true">
                            <RadioButton
                                android:id="@+id/type_heatmap"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/map_heatmap"/>
                            <RadioButton
                                android:id="@+id/type_convex"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/border_convex"/>
                            <RadioButton
                                android:id="@+id/type_concave"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/border_concave"/>
                            <RadioButton
                                android:id="@+id/type_cluster"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/border_cluster"/>
                            <RadioButton
                                android:id="@+id/type_best_pilot"
                                android:layout_width="wrap_content"
                                android:textColor="@android:color/black"
                                android:layout_height="wrap_content"
                                android:text="@string/border_best_pilot"/>
                        </RadioGroup>
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>