<!--
  ~ Copyright (c) Sebastian Lenkiewicz 2017.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sebastian.wirelessmanager.wifi.WifiFragment"
    android:id="@+id/wifi_layout">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/wifi_off_on_segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:contentPadding="8dp"
        android:layout_margin="4dp"
        card_view:cardElevation="@dimen/cardview_default_elevation">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wifi_off_on_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wifi_state_text"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/wifi_off_on_icon"
                android:text="@string/ph_wifi_state"/>
            <Switch
                android:id="@+id/wifi_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textOn="@string/wifi_switch_on"
                android:textOff="@string/wifi_switch_off" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_off_on_segment">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/wifi_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:contentPadding="8dp"
                android:layout_margin="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/wifi_basic_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text="@string/wifi_basic_title"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentTop="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/wifi_basic_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|fill"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:layout_below="@id/wifi_basic_title"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/wifi_signal_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_basic"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:contentPadding="8dp"
                android:layout_margin="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/wifi_signal_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text="@string/signal_title"
                        android:layout_width="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/wifi_signal_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|fill"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_centerInParent="true"
                        android:text="@string/signal_strength_ph"
                        android:layout_toEndOf="@id/wifi_signal_title"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
