<!--
  ~ Copyright (c) Sebastian Lenkiewicz 2017.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telephony_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sebastian.wirelessmanager.telephony.TelephonyFragment"
    android:padding="8dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/phone_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                card_view:contentPadding="8dp"
                android:layout_margin="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/system_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text="@string/system_title"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentTop="true"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/system_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|fill"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:layout_below="@id/system_title"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cell_info"
                android:layout_below="@id/phone_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:contentPadding="8dp"
                android:layout_margin="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/cell_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text="@string/cell_title"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentTop="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/cell_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|fill"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="@string/cell_text_ph"
                        android:layout_below="@id/cell_title"/>
                    <TextView
                        android:id="@+id/cell_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_below="@id/cell_tv"
                        android:visibility="gone"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/str_info"
                android:layout_below="@id/cell_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:contentPadding="8dp"
                android:layout_margin="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/signal_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text="@string/signal_title"
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentTop="true"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/signal_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|fill"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_centerInParent="true"
                        android:text="@string/signal_strength_ph"
                        android:layout_below="@id/signal_title"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
